src/objects/MergeRuleConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>City__c</fullName>
        <defaultValue>false</defaultValue>
        <label>City</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <defaultValue>true</defaultValue>
        <label>First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>instead of Phone we are using &quot;Home Phone__c&quot; field</description>
        <label>Home Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zip/Postal Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Street</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Triton_Id__c</fullName>
        <label>Triton Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>LeadMergeRuleConfig</label>
</CustomObject>